Build system: use maven-failsafe-plugin for integration tests + bump version of surefire