@@ -54,6 +54,12 @@
 					<runOrder>alphabetical</runOrder>
 				</configuration>
 			</plugin>
+			<plugin>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<configuration>
+					<runOrder>alphabetical</runOrder>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
@@ -257,7 +263,12 @@
 						<artifactId>maven-surefire-plugin</artifactId>
 						<configuration>
 							<skip>false</skip>
-							<argLine>-XX:MaxPermSize=256m</argLine>
+						</configuration>
+					</plugin>
+					<plugin>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<configuration>
+							<skip>false</skip>
 						</configuration>
 					</plugin>
 				</plugins>
